[gd_scene load_steps=5 format=3 uid="uid://b8alqjyg7i60o"]

[ext_resource type="Script" path="res://Scenes/ledge.gd" id="1_0jc38"]
[ext_resource type="Texture2D" uid="uid://cgy0siwsebjt4" path="res://Graphics/ledge.png" id="1_qxgqf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vfs2h"]
radius = 20.0
height = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqete"]
size = Vector2(40, 6)

[node name="Ledge" type="Area2D"]
collision_layer = 4
script = ExtResource("1_0jc38")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.625, 0.09375)
texture = ExtResource("1_qxgqf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vfs2h")

[node name="LedgePos" type="Marker2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_hqete")
one_way_collision = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
